datasets/dataset_txt/mitmproxy/mitmproxy_1518.txt
jamime commented on 19 Feb 2015
I have seen multiple places claiming windows support for mitmdump however I can not get it to launch.
C:\Python34\Scripts>py mitmdump
Traceback (most recent call last):
File "mitmdump", line 6, in
exec(compile(open(file).read(), file, 'exec'))
File "C:\Users\IEUser\Downloads\mitmproxy-master\mitmproxy-master\mitmdump", line 2, in
from libmproxy.main import mitmdump
File "c:\users\ieuser\downloads\mitmproxy-master\mitmproxy-master\libmproxy\main.py", line 73
except ProxyServerError, v:
^
SyntaxError: invalid syntax
Am I doing something wrong? This worked fine on my Mac.
I've tried installing via pip and git and I get the same error.